--- a/DavendWebApp/src/app/components/header/header.mobile.css
+++ b/DavendWebApp/src/app/components/header/header.mobile.css
@@ -129,7 +129,7 @@
   transition: opacity 0.3s ease;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 950px) {
   .mobile-controls {
     transition: opacity 0.3s ease;
   }
